<resources>
    <string name="app_name">runIT</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="action_register">Register</string>
    <string name="or">or</string>
    <string name="title_activity_run_picker">RunPicker</string>
    <string name="lorem_impsu">Lorem Ipsum </string>
    <string name="title_activity_main">RunIT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">You haven\'t selected any event :(</string>

    <string name="nav_event_info">Event Info</string>
    <string name="nav_event_picker">Event Picker</string>
    <string name="nav_event_reporter">Report Something</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_live_map">Live Map</string>

    <string name="url_ng">http://53eabf09.ngrok.io</string>
    <string name="pref_token">token-val</string>

</resources>
